[gd_scene load_steps=14 format=3 uid="uid://mg1unsitn8ci"]

[ext_resource type="Script" path="res://data/scenes/battle/battle.gd" id="1_jrgxh"]
[ext_resource type="Texture2D" uid="uid://d0xa37jkc1q5j" path="res://data/sprites/tilemap_packed.png" id="2_4geur"]
[ext_resource type="PackedScene" uid="uid://dlidi50l2a8vf" path="res://data/scenes/enemy/enemy.tscn" id="3_k4aol"]
[ext_resource type="Script" path="res://data/scripts/resources/enemy_stats.gd" id="4_muu81"]

[sub_resource type="Animation" id="Animation_6lpee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BattleResultUI/DarkBG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 180)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer:custom_minimum_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_404xk"]
resource_name = "battle_end"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}

[sub_resource type="Animation" id="Animation_qtol8"]
resource_name = "battle_result"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BattleResultUI/DarkBG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(350, 91)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(320, 180), Vector2(320, 180), Vector2(145, 134.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer:custom_minimum_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(350, 91)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/BattleResultUI/BattleResultContainer/MarginContainer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"hide"
}, {
"args": [],
"method": &"show"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/BattleResultUI")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mpm17"]
_data = {
"RESET": SubResource("Animation_6lpee"),
"battle_end": SubResource("Animation_404xk"),
"battle_result": SubResource("Animation_qtol8")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vrwff"]
texture = ExtResource("2_4geur")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSet" id="TileSet_2ci5r"]
sources/0 = SubResource("TileSetAtlasSource_vrwff")

[sub_resource type="Resource" id="Resource_yp6cd"]
resource_local_to_scene = true
script = ExtResource("4_muu81")
experience_points = 60
name = "Enemy"
health = 100
max_health = 100
strength = 1
agility = 1
intelligence = 1

[sub_resource type="Resource" id="Resource_5ebnt"]
resource_local_to_scene = true
script = ExtResource("4_muu81")
experience_points = 60
name = "Enemy"
health = 100
max_health = 100
strength = 1
agility = 1
intelligence = 1

[sub_resource type="CanvasTexture" id="CanvasTexture_wra58"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_jrgxh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_mpm17")
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_2ci5r")
format = 2
layer_0/tile_data = PackedInt32Array(917504, 0, 1, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 1, 917518, 0, 0, 917519, 0, 1, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 1, 917533, 0, 0, 917534, 0, 2, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 917543, 0, 0, 983079, 0, 0, 1048615, 0, 0, 1114151, 0, 0, 1179687, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 2, 1376256, 0, 0, 1441792, 0, 0, 983039, 0, 2, 1048575, 0, 0, 1114111, 0, 0, 1179647, 0, 0, 1245183, 0, 0, 1310719, 0, 0, 1376255, 0, 0, 1441791, 0, 0, 1507327, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 1, 1310721, 0, 2, 1376257, 0, 0, 1441793, 0, 1, 983042, 0, 0, 1048578, 0, 0, 1114114, 0, 0, 1179650, 0, 0, 1245186, 0, 0, 1310722, 0, 0, 1376258, 0, 0, 1441794, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1114115, 0, 0, 1179651, 0, 1, 1245187, 0, 0, 1310723, 0, 0, 1376259, 0, 0, 1441795, 0, 0, 983044, 0, 0, 1048580, 0, 0, 1114116, 0, 0, 1179652, 0, 0, 1245188, 0, 0, 1310724, 0, 0, 1376260, 0, 0, 1441796, 0, 0, 983045, 0, 0, 1048581, 0, 0, 1114117, 0, 0, 1179653, 0, 0, 1245189, 0, 0, 1310725, 0, 2, 1376261, 0, 0, 1441797, 0, 0, 983046, 0, 0, 1048582, 0, 0, 1114118, 0, 0, 1179654, 0, 0, 1245190, 0, 1, 1310726, 0, 0, 1376262, 0, 0, 1441798, 0, 0, 983047, 0, 0, 1048583, 0, 0, 1114119, 0, 0, 1179655, 0, 0, 1245191, 0, 0, 1310727, 0, 0, 1376263, 0, 2, 1441799, 0, 0, 983048, 0, 0, 1048584, 0, 0, 1114120, 0, 0, 1179656, 0, 0, 1245192, 0, 0, 1310728, 0, 2, 1376264, 0, 0, 1441800, 0, 0, 983049, 0, 1, 1048585, 0, 0, 1114121, 0, 0, 1179657, 0, 0, 1245193, 0, 0, 1310729, 0, 0, 1376265, 0, 0, 1441801, 0, 0, 983050, 0, 0, 1048586, 0, 0, 1114122, 0, 0, 1179658, 0, 1, 1245194, 0, 0, 1310730, 0, 0, 1376266, 0, 0, 1441802, 0, 1, 983051, 0, 0, 1048587, 0, 0, 1114123, 0, 0, 1179659, 0, 0, 1245195, 0, 0, 1310731, 0, 0, 1376267, 0, 2, 1441803, 0, 0, 983052, 0, 0, 1048588, 0, 0, 1114124, 0, 2, 1179660, 0, 0, 1245196, 0, 0, 1310732, 0, 0, 1376268, 0, 0, 1441804, 0, 0, 983053, 0, 0, 1048589, 0, 0, 1114125, 0, 0, 1179661, 0, 0, 1245197, 0, 2, 1310733, 0, 0, 1376269, 0, 0, 1441805, 0, 2, 983054, 0, 0, 1048590, 0, 1, 1114126, 0, 0, 1179662, 0, 0, 1245198, 0, 0, 1310734, 0, 0, 1376270, 0, 1, 1441806, 0, 0, 983055, 0, 0, 1048591, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 2, 1310735, 0, 0, 1376271, 0, 1, 1441807, 0, 0, 983056, 0, 0, 1048592, 0, 1, 1114128, 0, 0, 1179664, 0, 0, 1245200, 0, 0, 1310736, 0, 0, 1376272, 0, 0, 1441808, 0, 0, 983057, 0, 2, 1048593, 0, 0, 1114129, 0, 2, 1179665, 0, 0, 1245201, 0, 0, 1310737, 0, 1, 1376273, 0, 1, 1441809, 0, 0, 983058, 0, 0, 1048594, 0, 0, 1114130, 0, 0, 1179666, 0, 0, 1245202, 0, 1, 1310738, 0, 0, 1376274, 0, 0, 1441810, 0, 0, 983059, 0, 0, 1048595, 0, 0, 1114131, 0, 0, 1179667, 0, 2, 1245203, 0, 0, 1310739, 0, 2, 1376275, 0, 0, 1441811, 0, 0, 983060, 0, 0, 1048596, 0, 0, 1114132, 0, 0, 1179668, 0, 0, 1245204, 0, 1, 1310740, 0, 0, 1376276, 0, 0, 1441812, 0, 0, 983061, 0, 0, 1048597, 0, 0, 1114133, 0, 0, 1179669, 0, 0, 1245205, 0, 0, 1310741, 0, 1, 1376277, 0, 0, 1441813, 0, 2, 983062, 0, 0, 1048598, 0, 0, 1114134, 0, 0, 1179670, 0, 0, 1245206, 0, 0, 1310742, 0, 0, 1376278, 0, 0, 1441814, 0, 0, 983063, 0, 0, 1048599, 0, 0, 1114135, 0, 0, 1179671, 0, 0, 1245207, 0, 0, 1310743, 0, 0, 1376279, 0, 0, 1441815, 0, 0, 983064, 0, 0, 1048600, 0, 0, 1114136, 0, 0, 1179672, 0, 0, 1245208, 0, 0, 1310744, 0, 0, 1376280, 0, 0, 1441816, 0, 0, 983065, 0, 0, 1048601, 0, 0, 1114137, 0, 0, 1179673, 0, 0, 1245209, 0, 0, 1310745, 0, 0, 1376281, 0, 0, 1441817, 0, 0, 983066, 0, 0, 1048602, 0, 0, 1114138, 0, 0, 1179674, 0, 0, 1245210, 0, 0, 1310746, 0, 0, 1376282, 0, 0, 1441818, 0, 0, 983067, 0, 0, 1048603, 0, 0, 1114139, 0, 0, 1179675, 0, 0, 1245211, 0, 0, 1310747, 0, 0, 1376283, 0, 0, 1441819, 0, 0, 983068, 0, 1, 1048604, 0, 0, 1114140, 0, 0, 1179676, 0, 0, 1245212, 0, 0, 1310748, 0, 0, 1376284, 0, 0, 1441820, 0, 0, 983069, 0, 0, 1048605, 0, 0, 1114141, 0, 0, 1179677, 0, 0, 1245213, 0, 0, 1310749, 0, 0, 1376285, 0, 0, 1441821, 0, 2, 983070, 0, 0, 1048606, 0, 0, 1114142, 0, 0, 1179678, 0, 0, 1245214, 0, 2, 1310750, 0, 0, 1376286, 0, 0, 1441822, 0, 0, 983071, 0, 0, 1048607, 0, 0, 1114143, 0, 0, 1179679, 0, 0, 1245215, 0, 0, 1310751, 0, 2, 1376287, 0, 0, 1441823, 0, 0, 983072, 0, 0, 1048608, 0, 0, 1114144, 0, 0, 1179680, 0, 2, 1245216, 0, 0, 1310752, 0, 0, 1376288, 0, 1, 1441824, 0, 0, 983073, 0, 0, 1048609, 0, 0, 1114145, 0, 1, 1179681, 0, 0, 1245217, 0, 0, 1310753, 0, 0, 1376289, 0, 1, 1441825, 0, 0, 983074, 0, 0, 1048610, 0, 0, 1114146, 0, 1, 1179682, 0, 1, 1245218, 0, 1, 1310754, 0, 0, 1376290, 0, 0, 1441826, 0, 0, 983075, 0, 0, 1048611, 0, 0, 1114147, 0, 1, 1179683, 0, 0, 1245219, 0, 0, 1310755, 0, 0, 1376291, 0, 0, 1441827, 0, 0, 983076, 0, 0, 1048612, 0, 0, 1114148, 0, 0, 1179684, 0, 0, 1245220, 0, 0, 1310756, 0, 0, 1376292, 0, 0, 1441828, 0, 0, 983077, 0, 0, 1048613, 0, 0, 1114149, 0, 0, 1179685, 0, 0, 1245221, 0, 0, 1310757, 0, 0, 1376293, 0, 0, 1441829, 0, 0, 983078, 0, 0, 1048614, 0, 2, 1114150, 0, 0, 1179686, 0, 0, 1245222, 0, 0, 1310758, 0, 0, 1376294, 0, 0, 1441830, 0, 0, 1245223, 0, 0, 1310759, 0, 1, 1376295, 0, 2, 1441831, 0, 0, 917544, 0, 0, 983080, 0, 0, 1048616, 0, 0, 1114152, 0, 0, 1179688, 0, 0, 1245224, 0, 0, 1310760, 0, 0, 1376296, 0, 0, 1441832, 0, 0)

[node name="PlayerPositions" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PlayerPos1" type="Marker2D" parent="PlayerPositions"]
position = Vector2(231, 223)

[node name="PlayerPos2" type="Marker2D" parent="PlayerPositions"]
position = Vector2(149, 223)

[node name="PlayerPos3" type="Marker2D" parent="PlayerPositions"]
position = Vector2(57, 223)

[node name="EnemyPositions" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EnemyPos1" type="Marker2D" parent="EnemyPositions"]
position = Vector2(398, 223)

[node name="Enemy" parent="EnemyPositions/EnemyPos1" node_paths=PackedStringArray("state_machine", "sprite", "anim_player", "arrow", "health_bar") instance=ExtResource("3_k4aol")]
stats = SubResource("Resource_yp6cd")
state_machine = NodePath("EnemyStateMachine")
sprite = NodePath("Sprite2D")
anim_player = NodePath("AnimationPlayer")
arrow = NodePath("Arrow")
health_bar = NodePath("UI/HealthBar")

[node name="EnemyPos2" type="Marker2D" parent="EnemyPositions"]
position = Vector2(490, 223)

[node name="Enemy" parent="EnemyPositions/EnemyPos2" node_paths=PackedStringArray("state_machine", "sprite", "anim_player", "arrow", "health_bar") instance=ExtResource("3_k4aol")]
stats = SubResource("Resource_5ebnt")
state_machine = NodePath("EnemyStateMachine")
sprite = NodePath("Sprite2D")
anim_player = NodePath("AnimationPlayer")
arrow = NodePath("Arrow")
health_bar = NodePath("UI/HealthBar")

[node name="EnemyPos3" type="Marker2D" parent="EnemyPositions"]
position = Vector2(572, 223)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BattleUI" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/BattleUI"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/BattleUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="MainMenuContainer" type="HBoxContainer" parent="CanvasLayer/BattleUI/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AttackButton" type="Button" parent="CanvasLayer/BattleUI/PanelContainer/MarginContainer/MainMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(102, 56)
layout_mode = 2
size_flags_horizontal = 0
text = "ATTACK"

[node name="MagicButton" type="Button" parent="CanvasLayer/BattleUI/PanelContainer/MarginContainer/MainMenuContainer"]
custom_minimum_size = Vector2(102, 56)
layout_mode = 2
size_flags_horizontal = 0
text = "MAGIC"

[node name="EscapeButton" type="Button" parent="CanvasLayer/BattleUI/PanelContainer/MarginContainer/MainMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(102, 56)
layout_mode = 2
size_flags_horizontal = 0
text = "ESCAPE"

[node name="BattleResultUI" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DarkBG" type="TextureRect" parent="CanvasLayer/BattleResultUI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_wra58")

[node name="BattleResultContainer" type="PanelContainer" parent="CanvasLayer/BattleResultUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 180.0
offset_right = 331.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/BattleResultUI/BattleResultContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="BattleResultVBox" type="VBoxContainer" parent="CanvasLayer/BattleResultUI/BattleResultContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="BattleTextTop" type="RichTextLabel" parent="CanvasLayer/BattleResultUI/BattleResultContainer/MarginContainer/BattleResultVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
text = "Battle Result
"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/BattleResultUI/BattleResultContainer/MarginContainer/BattleResultVBox"]
layout_mode = 2

[connection signal="button_down" from="CanvasLayer/BattleUI/PanelContainer/MarginContainer/MainMenuContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="button_down" from="CanvasLayer/BattleUI/PanelContainer/MarginContainer/MainMenuContainer/EscapeButton" to="." method="_on_escape_button_button_down"]
